# BezierTubes

./: .gitignore  CMakeLists.txt
+Bezier/: A_to_Pi.m  D.m  Delta.m  Delta_vec.m  F_G.m  H.m  H_vec.m  K.m  M.m  M_N_Gamma.m  Pi.m  Poly.m  Proj_PSD.m  Q.m  R.m  R_n.m  S.m  Z.m  test_BsplineVsSplitBezier.m  test_IC_Reachable.m  test_ReachablePend.m  test_ReachableRefinement.m  test_benchmarkReachable.m  test_different_xbar.m  test_exo_foot_pos.m  test_howMuchRelaxationIsProjOntoPSDCone.m  test_infinity_norm_hard.m  test_infinity_norm_hard_try2.m  test_infinity_norm_hard_try3.m  test_infty_norm.m  test_new_theory.m  test_speed.m  test_trueReachable.m  unitTest.m
bindings/: bezier.cpp
cpp/: CMakeLists.txt
cpp/inc/: Bezier.h
cpp/src/: Bezier.cpp  main.cpp
examples_matlab/: Pendulum.m  Unicycle.m  different_xbar.m
figures/: PlotComparison.m  plot_Bez.m  plot_Bspline.m  plot_nStep.m
inc/: Bezier.h  Types.h
python/: main.py
src/: Bezier.cpp  main.cpp
unittest/: hello_test.cc
